applications/infrastructure/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.56.200"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    # Cleartext gRPC for Hubble relay (Cilium proxies it, observes l7 flows)
    - name: hubble-relay
      port: 4245
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
